--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 4</title>
     <link rel="stylesheet" href="Styles/styles.css">
+
 </head>
-<body>
+<body body style="background-color:rgb(211, 230, 176);>
 
         <h2 class="flex_heading">Boxes with flex</h2>
 
