--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 
+<!--Different colors help me navigate better-->
 <section class="layout-one">
 
     <div class="box-one">
@@ -24,7 +25,7 @@
           <div class="box-two__box"></div>
         </div>
     
-
+<!--For some reasen my layers dont aling properly-->
 <section class="layout-two">
 
             <div class="box-three">
